updatin azure-pipelines.yml 01

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ stages:
     displayName: Deploy
     pool:
       vmImage: $(vmImageName)
-    environment: 'bryan151pipelinesjavascriptdocker.qa'
+    environment: 'bryan151pipelinesjavascriptdocker.dev'
     strategy:
       runOnce:
         deploy:
