updatin azure-pipelines.yml 02

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,8 +44,8 @@ stages:
     - upload: manifests
       artifact: manifests
 
-- stage: Deploy
-  displayName: Deploy stage
+- stage: Dev
+  displayName: Dev stage
   dependsOn: Build
 
   jobs:
@@ -54,6 +54,38 @@ stages:
     pool:
       vmImage: $(vmImageName)
     environment: 'bryan151pipelinesjavascriptdocker.dev'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: KubernetesManifest@0
+            displayName: Create imagePullSecret
+            inputs:
+              action: createSecret
+              secretName: $(imagePullSecret)
+              dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
+
+          - task: KubernetesManifest@0
+            displayName: Deploy to Kubernetes cluster
+            inputs:
+              action: deploy
+              manifests: |
+                $(Pipeline.Workspace)/manifests/deployment.yml
+                $(Pipeline.Workspace)/manifests/service.yml
+              imagePullSecrets: |
+                $(imagePullSecret)
+              containers: |
+                $(containerRegistry)/$(imageRepository):$(tag)
+- stage: Test
+  displayName: Test stage
+  dependsOn: Build
+
+  jobs:
+  - deployment: Deploy
+    displayName: Deploy
+    pool:
+      vmImage: $(vmImageName)
+    environment: 'bryan151pipelinesjavascriptdocker.qa'
     strategy:
       runOnce:
         deploy:
