updatin azure-pipelines.yml 06

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,8 @@ stages:
 
     - upload: manifests
       artifact: manifests
+    - upload: charts
+      artifact: charts
 
 - stage: Dev
   displayName: Dev stage
