updatin azure-pipelines.yml 08

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,14 +70,15 @@ stages:
             inputs:
               action: createSecret
               secretName: $(imagePullSecret)
-              dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
+              dockerRegistryEndpoint: $(dockerRegistryServiceConnection)              
 
           - task: HelmDeploy@0
             displayName: Helm install
             inputs:
-              azureSubscriptionEndpoint: $(azureSubscriptionEndpoint)
-              azureResourceGroup: $(azureResourceGroup)
-              kubernetesCluster: $(kubernetesCluster)
+              # azureSubscriptionEndpoint: $(azureSubscriptionEndpoint)
+              # azureResourceGroup: $(azureResourceGroup)
+              # kubernetesCluster: $(kubernetesCluster)
+              namespace: dev
               command: install
               chartType: FilePath
               chartPath: $(Pipeline.Workspace)/charts/sampleapp
