updatin azure-pipelines.yml 12

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,7 +84,7 @@ stages:
               command: upgrade
               chartType: FilePath
               chartPath: $(Pipeline.Workspace)/charts/sampleapp
-              azureContainerRegistry: $(dockerRegistryServiceConnection)
+              azureResourceGroupForACR: $(dockerRegistryServiceConnection)
             
 - stage: Test
   displayName: Test stage
