updatin azure-pipelines.yml 13

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,7 +84,9 @@ stages:
               command: upgrade
               chartType: FilePath
               chartPath: $(Pipeline.Workspace)/charts/sampleapp
-              azureResourceGroupForACR: $(dockerRegistryServiceConnection)
+              azureSubscriptionEndpointForACR: $(dockerRegistryServiceConnection)
+              releaseName: azuredevopsdemo
+              install: true
             
 - stage: Test
   displayName: Test stage
