--- a/charts/sampleapp/templates/service.yml
+++ b/charts/sampleapp/templates/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: nodeapp
+    name: bryanpipelinesjavascriptdocker
 spec:
     type: LoadBalancer
     ports:
     - port: 8080 
     selector:
-        app: nodeapp
+        app: bryanpipelinesjavascriptdocker
