--- a/charts/sampleapp/templates/deployment.yml
+++ b/charts/sampleapp/templates/deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: bryanpipelinesjavascriptdocker 
-          image: jalabootcampcontainer01.azurecr.io/bryanpipelinesjavascriptdocker
+          image: jalabootcampcontainer01.azurecr.io/bryanpipelinesjavascriptdocker:70
           ports:
           - containerPort: 8080
