--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,9 +43,11 @@ stages:
 
     - upload: manifests
       artifact: manifests
+    - upload: charts
+      artifact: charts
 
-- stage: Deploy
-  displayName: Deploy stage
+- stage: Dev
+  displayName: Dev stage
   dependsOn: Build
 
   jobs:
@@ -53,7 +55,7 @@ stages:
     displayName: Deploy
     pool:
       vmImage: $(vmImageName)
-    environment: 'bryan151pipelinesjavascriptdocker.default'
+    environment: 'bryan151pipelinesjavascriptdocker.dev'
     strategy:
       runOnce:
         deploy:
@@ -65,15 +67,14 @@ stages:
               secretName: $(imagePullSecret)
               dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
 
-          - task: KubernetesManifest@0
-            displayName: Deploy to Kubernetes cluster
+          - task: HelmDeploy@0
+            displayName: Helm install
             inputs:
-              action: deploy
-              manifests: |
-                $(Pipeline.Workspace)/manifests/deployment.yml
-                $(Pipeline.Workspace)/manifests/service.yml
-              imagePullSecrets: |
-                $(imagePullSecret)
-              containers: |
-                $(containerRegistry)/$(imageRepository):$(tag)
+              namespace: dev
+              command: upgrade
+              chartType: FilePath
+              chartPath: $(Pipeline.Workspace)/charts/sampleapp
+              releaseName: azuredevopsdemo
+              install: true
+              force: true              
 
